--- a/IDM/smallpacco.tex
+++ b/IDM/smallpacco.tex
@@ -57,6 +57,8 @@
 % custom section
 \usepackage[explicit]{titlesec}
 \newcommand*\sectionlabel{}
+\newcommand{\pr}{\mathbb{P}}
+\newcommand{\mbf}[1]{\mathbf{#1}}
 
 \titleformat{\section}
 {\gdef\sectionlabel{}
