--- a/SMSP/paccosmsp.sty
+++ b/SMSP/paccosmsp.sty
@@ -394,6 +394,7 @@
 \newcommand{\cov}{\text{Cov}}
 \newcommand{\BMF}{\left((B_t)_{t\geq 0},\mathcal{F}_t \right)}
 \newcommand{\mFt}{\mathcal{F}_t}
+\newcommand{\dy}{\dif y}
 
 \input{drawings/A FUCKING CLOCK}
 \pretitle{\begin{center}\LARGE\color{RedViolet}}
